--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Add.cshtml
@@ -13,14 +13,14 @@
                         </header>
                         <div class="panel-body">
                             <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Add" method="post" enctype="multipart/form-data">
-                                <div class="form-group has-success">
+                                <div class="form-group">
 
                                     <div class="col-lg-10">
                                         <input type="text" name="TittleAz" placeholder="TittleAz" id="f-name" class="form-control">
 
                                     </div>
                                 </div>
-                                <div class="form-group has-success">
+                                <div class="form-group">
 
                                     <div class="col-lg-10">
                                         <input type="text" name="TittleRu" placeholder="TittleRu" id="f-name" class="form-control">
@@ -56,7 +56,7 @@
                                 <div class="form-group">
 
                                     <div class="col-lg-10">
-                                        <input type="file" name="FileData"  placeholder="TittleEn" id="f-name" class="form-control">
+                                        <input type="file" name="FileData"  placeholder="Images" id="f-name" class="form-control">
 
                                     </div>
                                 </div>
