--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Add.cshtml
@@ -9,28 +9,28 @@
                 <div class="col-lg-12">
                     <section class="panel">
                         <header class="panel-heading">
-                            About Add
+                            Service Add
                         </header>
                         <div class="panel-body">
-                            <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="About" asp-action="Add" method="post" enctype="multipart/form-data">
+                            <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Service" asp-action="Add" method="post" enctype="multipart/form-data">
                                 <div class="form-group">
 
                                     <div class="col-lg-10">
-                                        <input type="text" name="TittleAz" placeholder="TittleAz" id="f-name" class="form-control">
+                                        <input type="text" name="NameAz" placeholder="NameAz" id="f-name" class="form-control">
 
                                     </div>
                                 </div>
                                 <div class="form-group">
 
                                     <div class="col-lg-10">
-                                        <input type="text" name="TittleRu" placeholder="TittleRu" id="f-name" class="form-control">
+                                        <input type="text" name="NameRu" placeholder="NameRu" id="f-name" class="form-control">
 
                                     </div>
                                 </div>
                                 <div class="form-group">
 
                                     <div class="col-lg-10">
-                                        <input type="text" name="TittleEn" placeholder="TittleEn" id="f-name" class="form-control">
+                                        <input type="text" name="NameEn" placeholder="NameEn" id="f-name" class="form-control">
 
                                     </div>
                                 </div>
@@ -38,19 +38,19 @@
                                 <div class="form-group ">
 
                                     <div class="col-lg-10">
-                                        <textarea placeholder="ContentRu" class="form-control " id="ccomment" name="ContentRu" required=""></textarea>
+                                        <textarea placeholder="TittleAz" class="form-control " id="ccomment" name="TittleAz" required=""></textarea>
                                     </div>
                                 </div>
                                 <div class="form-group ">
 
                                     <div class="col-lg-10">
-                                        <textarea placeholder="ContentEn" class="form-control " id="ccomment" name="ContentEn" required=""></textarea>
+                                        <textarea placeholder="TittleEn" class="form-control " id="ccomment" name="TittleEn" required=""></textarea>
                                     </div>
                                 </div>
                                 <div class="form-group ">
 
                                     <div class="col-lg-10">
-                                        <textarea placeholder="ContentAz" class="form-control " id="ccomment" name="ContentAz" required=""></textarea>
+                                        <textarea placeholder="TittleRu" class="form-control " id="ccomment" name="TittleRu" required=""></textarea>
                                     </div>
                                 </div>
                                 <div class="form-group">
