--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Edit.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Edit.cshtml
@@ -1,7 +1,74 @@
-﻿
-@{
-    ViewData["Title"] = "Edit";
-}
+﻿@model UserEditModel
 
-<h2>Edit</h2>
+<!--main content start-->
+<section id="main-content">
+    <section class="wrapper">
 
+        <!-- page start-->
+        <div class="row">
+            <aside class="profile-nav col-lg-3">
+                <section class="panel">
+                    <div class="user-heading round">
+                        <h1>@Html.DisplayNameFor(model=>model.Name)</h1>
+                        <p>@Html.DisplayNameFor(model=>model.Email)</p>
+                    </div>
+                    <ul class="nav nav-pills nav-stacked">
+                        <li><a asp-controller="Account" asp-action="Index"> <i class="icon-user"></i> Profile</a></li>
+                        <li class="active"><a asp-controller="Account" asp-action="Edit"> <i class="icon-edit"></i> Edit profile</a></li>
+                    </ul>
+                </section>
+            </aside>
+            <aside class="profile-info col-lg-9">
+                <section class="panel">
+                    <div class="panel-body bio-graph-info">
+                        <h1> Profile Edit</h1>
+                        <form asp-controller="account" asp-action="edit" class="form-horizontal" role="form">
+                            <div asp-validation-summary="ModelOnly" class="text-danger">Please fix the error.</div>
+                            @Html.HiddenFor(m => m.Id)
+                            @Html.AntiForgeryToken()
+                            <div class="form-group">
+                            </div>
+                            <div class="form-group">
+                                <label class="col-lg-2 control-label">@Html.DisplayNameFor(model=>model.Name)</label>
+                                <div class="col-lg-6">
+                                    <input type="text" asp-for="Name" class="form-control" id="f-name" placeholder="Enter a name">
+                                    <span asp-validation-for="Name" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-lg-2 control-label">@Html.DisplayNameFor(m => m.Email)</label>
+                                <div class="col-lg-6">
+                                    <input type="text" asp-for="Email" class="form-control" id="email" placeholder="Enter a email">
+                                    <span asp-validation-for="Email" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-lg-2 control-label">@Html.DisplayNameFor(m => m.Username)</label>
+                                <div class="col-lg-6">
+                                    <input type="text" asp-for="Username" class="form-control" id="n-pwd" placeholder="Enter a username">
+                                    <span asp-validation-for="Username" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-lg-2 control-label">@Html.DisplayNameFor(m => m.Password)</label>
+                                <div class="col-lg-6">
+                                    <input type="password" asp-for="Password" class="form-control" id="n-pwd" placeholder="Enter a password">
+                                    <span asp-validation-for="Password" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-lg-offset-2 col-lg-10">
+                                    <button type="submit" class="btn btn-success">Save</button>
+                                    <button asp-action="index" asp-controller="account" type="button" class="btn btn-default">Cancel</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </section>
+            </aside>
+        </div>
+        <!-- page end-->
+
+    </section>
+</section>
+<!--main content end-->
