--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Add.cshtml
@@ -63,15 +63,21 @@
 
                                         </select>
                                     </div>
-                                       
-                                    </div>
 
-                                    <div class="form-group">
-                                        <div class="col-lg-offset-2 col-lg-10">
-                                            <button class="btn btn-success" type="submit">Submit</button>
-                                        </div>
+                                </div>
+                                <div class="form-group">
+
+                                    <div class="col-lg-10">
+                                        <input type="file" name="file" placeholder="Images" id="f-name" class="form-control">
+
                                     </div>
-</form>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-lg-offset-2 col-lg-10">
+                                        <button class="btn btn-success" type="submit">Submit</button>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
                     </section>
                 </div>
