adminin ad hissesini View Componentse cixardim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, ConstructionSite
 @using ConstructionSite.Areas.ConstructionAdmin.Models.ViewModels.Account
 @using ConstructionSite.Areas.ConstructionAdmin.Models.DTO
 @using ConstructionSite.Entity.Identity
