--- a/ConstructionSite/Views/Home/Index.cshtml
+++ b/ConstructionSite/Views/Home/Index.cshtml
@@ -148,10 +148,10 @@
         <div id="site-content" class="site-content clearfix">
             <div id="inner-content" class="inner-content-wrap">
                 <div class="page-content">
-                    @(await Component.InvokeAsync("About"))
-                    @(await Component.InvokeAsync("Service"))
-                    @(await Component.InvokeAsync("Portfolio"))
-                    @(await Component.InvokeAsync("Testimonial"))
+                    @await Component.InvokeAsync("About")
+                    @await Component.InvokeAsync("Service")
+                    @await Component.InvokeAsync("Portfolio")
+                    @await Component.InvokeAsync("Testimonial")
 
 
                 </div>
