--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
@@ -9,12 +9,12 @@
             <aside class="profile-nav col-lg-3">
                 <section class="panel">
                     <div class="user-heading round">
-                        <h1>@Html.DisplayNameFor(model=>model.Name)</h1>
-                        <p>@Html.DisplayNameFor(model=>model.Email)</p>
+                        <vc:userprofilename></vc:userprofilename>
+                        @*<p>@Html.DisplayNameFor(model=>model.Email)</p>*@
                     </div>
                     <ul class="nav nav-pills nav-stacked">
                         <li class="active"><a asp-controller="Account" asp-action="Index"> <i class="icon-user"></i> Profile</a></li>
-                        <li><a asp-controller="Account" asp-action="Edit"> <i class="icon-edit"></i> Edit profile</a></li>
+                        <li><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Edit"> <i class="icon-edit"></i> Edit profile</a></li>
                     </ul>
                 </section>
             </aside>
@@ -26,9 +26,9 @@
                             <div class="bio-row">
                                 <p><span>Full Name </span>: @Html.DisplayNameFor(model=>model.Name)</p>
                             </div>
-                            <div class="bio-row">
+                            @*<div class="bio-row">
                                 <p><span>Email </span>: @Html.DisplayNameFor(model => model.Email)</p>
-                            </div>
+                            </div>*@
                         </div>
                     </div>
                 </section>
