Adminin adini ve sheklini qeyd etdim

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/UserProfileName/Default.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/UserProfileName/Default.cshtml
@@ -1,3 +1,8 @@
 ﻿@model UserDTO
-
-<h1>@Model.Name</h1>
+    <div class="user-heading round">
+        <a href="#">
+            <img src="~/ConstructionAdmin/img/profile-avatar.jpg" alt="">
+        </a>
+        <h1>@Model.Name</h1>
+        <p>@Model.Email</p>
+    </div>
