--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
@@ -8,14 +8,14 @@
         <div class="row">
             <aside class="profile-nav col-lg-3">
                 <section class="panel">
-                    <div class="user-heading round">
-                        <vc:userprofilename></vc:userprofilename>
-                        @*<p>@Html.DisplayNameFor(model=>model.Email)</p>*@
-                    </div>
+                    <vc:user-profile-name></vc:user-profile-name>
+
                     <ul class="nav nav-pills nav-stacked">
-                        <li class="active"><a asp-controller="Account" asp-action="Index"> <i class="icon-user"></i> Profile</a></li>
+                        <li class="active"><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index"> <i class="icon-user"></i> Profile</a></li>
+                        <li><a href="profile-activity.html"> <i class="icon-calendar"></i> Recent Activity <span class="label label-danger pull-right r-activity">9</span></a></li>
                         <li><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Edit"> <i class="icon-edit"></i> Edit profile</a></li>
                     </ul>
+
                 </section>
             </aside>
             <aside class="profile-info col-lg-9">
@@ -26,9 +26,9 @@
                             <div class="bio-row">
                                 <p><span>Full Name </span>: @Html.DisplayNameFor(model=>model.Name)</p>
                             </div>
-                            @*<div class="bio-row">
+                            <div class="bio-row">
                                 <p><span>Email </span>: @Html.DisplayNameFor(model => model.Email)</p>
-                            </div>*@
+                            </div>
                         </div>
                     </div>
                 </section>
