--- a/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Service/Default.cshtml
@@ -57,7 +57,7 @@
                                         </div>
                                         <div class="service-item-wrap">
                                             <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Renovation">@item.NameAz</a></h3>
-                                            <p class="desc">Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam, tincidunt vel blandit eu, molestie eget.</p>
+                                            <p class="desc">@item.TittleAz</p>
                                         </div>
                                     </div>
                                 </div>
@@ -67,60 +67,7 @@
 
 
 
-                        <div class="cbp-item">
-                            <div class="member">
-                                <div class="inner">
-                                    <div class="image">
-                                        <div class="thumb"><img src="~/assets/img/services/2.jpg" alt="image" /></div>
-                                        <ul class="socials clearfix">
-                                            <li class="twitter"><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
-                                            <li class="google-plus"><a target="_blank" href="#"><i class="fa fa-google-plus"></i></a></li>
-                                            <li class="linkedin"><a target="_blank" href="#"><i class="fa fa-linkedin"></i></a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="service-item-wrap">
-                                        <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Consulting">Consulting</a></h3>
-                                        <p class="desc">Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam, tincidunt vel blandit eu, molestie eget.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="cbp-item">
-                            <div class="member">
-                                <div class="inner">
-                                    <div class="image">
-                                        <div class="thumb"><img src="~/assets/img/services/3.jpg" alt="image" /></div>
-                                        <ul class="socials clearfix">
-                                            <li class="twitter"><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
-                                            <li class="google-plus"><a target="_blank" href="#"><i class="fa fa-google-plus"></i></a></li>
-                                            <li class="linkedin"><a target="_blank" href="#"><i class="fa fa-linkedin"></i></a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="service-item-wrap">
-                                        <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Architecture">Architecture</a></h3>
-                                        <p class="desc">Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam, tincidunt vel blandit eu, molestie eget.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="cbp-item">
-                            <div class="member">
-                                <div class="inner">
-                                    <div class="image">
-                                        <div class="thumb"><img src="~/assets/img/services/3.jpg" alt="image" /></div>
-                                        <ul class="socials clearfix">
-                                            <li class="twitter"><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
-                                            <li class="google-plus"><a target="_blank" href="#"><i class="fa fa-google-plus"></i></a></li>
-                                            <li class="linkedin"><a target="_blank" href="#"><i class="fa fa-linkedin"></i></a></li>
-                                        </ul>
-                                    </div>
-                                    <div class="service-item-wrap">
-                                        <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Electrical">Electrical</a></h3>
-                                        <p class="desc">Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam, tincidunt vel blandit eu, molestie eget.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                      
                     </div>
                     <!-- /#team-wrap -->
 
