--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
@@ -13,7 +13,7 @@
                         @*<p>@Html.DisplayNameFor(model=>model.Email)</p>*@
                     </div>
                     <ul class="nav nav-pills nav-stacked">
-                        <li class="active"><a asp-controller="Account" asp-action="Index"> <i class="icon-user"></i> Profile</a></li>
+                        <li class="active"><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index"> <i class="icon-user"></i> Profile</a></li>
                         <li><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Edit"> <i class="icon-edit"></i> Edit profile</a></li>
                     </ul>
                 </section>
