--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
@@ -9,13 +9,9 @@
             <aside class="profile-nav col-lg-3">
                 <section class="panel">
                     <div class="user-heading round">
-                        <vc:userprofilename></vc:userprofilename>
+                        <vc:user-profile-name></vc:user-profile-name>
                         @*<p>@Html.DisplayNameFor(model=>model.Email)</p>*@
                     </div>
-                    <ul class="nav nav-pills nav-stacked">
-                        <li class="active"><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index"> <i class="icon-user"></i> Profile</a></li>
-                        <li><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Edit"> <i class="icon-edit"></i> Edit profile</a></li>
-                    </ul>
                 </section>
             </aside>
             <aside class="profile-info col-lg-9">
