--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Login.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Login.cshtml
@@ -39,28 +39,14 @@
             <h2 class="form-signin-heading">Sign In Now</h2>
             <div class="login-wrap">
                 <label>Email</label>
-                <div class="input-group input-group-icon">
-                    <input type="text" asp-for="Email" class="form-control" placeholder="Your Email" autofocus>
-                    <span class="input-group-addon">
-                        <span class="icon icon-lg">
-                            <i class="fa fa-user"></i>
-                        </span>
-                    </span>
-                </div>
+                <input type="text" asp-for="Email" class="form-control" placeholder="Your Email" autofocus style="width:100%">
                 <div>
                     <p>
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </p>
                 </div>
                 <label class="float-left">Password</label>
-                <div class="input-group input-group-icon">
-                    <input type="password" asp-for="Password" class="form-control" placeholder="Password">
-                    <span class="input-group-addon">
-                        <span class="icon icon-lg">
-                            <i class="fa fa-lock"></i>
-                        </span>
-                    </span>
-                </div>
+                <input type="password" asp-for="Password" class="form-control" placeholder="Password">
                 <div>
                     <p>
                         <span asp-validation-for="Password" class="text-danger"></span>
