--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -2,5 +2,6 @@
 @addTagHelper *, ConstructionSite
 @using ConstructionSite.Areas.ConstructionAdmin.Models.ViewModels.Account
 @using ConstructionSite.Areas.ConstructionAdmin.Models.DTO
+@using ConstructionSite.DTO.AdminViewModels 
 @using ConstructionSite.Entity.Identity
 @using ConstructionSite.Areas.ConstructionAdmin.Models.ViewModels
