About_Delete_Ajax_Request

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/_AdminLayout.cshtml
@@ -130,7 +130,7 @@
     <script src="~/ConstructionAdmin/js/sparkline-chart.js"></script>
     <script src="~/ConstructionAdmin/js/easy-pie-chart.js"></script>
     <script src="~/ConstructionAdmin/js/count.js"></script>
-
+    @RenderSection("scripts",false)
     <script>
 
         //owl carousel
