--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
@@ -27,14 +27,14 @@
 
                         @foreach (var item in Model)
                         {
-                            <tr class="odd">
-                                
-                                <td class="sorting_1">@item.TittleAz</td>
-                                <td class=" ">@item.ContentAz</td>
-                                <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
-                                <td class=" "><a class="edit" href="javascript:;">Edit</a></td>
-                                <td class=" "><a class="delete" href="javascript:;">Delete</a></td>
-                            </tr>
+                        <tr class="odd">
+                          
+                            <td class="sorting_1">@item.TittleAz</td>
+                            <td class=" ">@item.ContentAz</td>
+                            <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
+                            <td class=" "><a class="edit" href="javascript:;">Edit</a></td>
+                            <td class=" "><a class="btn btn-danger delete delete-about" data-id="@item.Id">Delete</a></td>
+                        </tr>
                         }
                     </tbody>
                 </table>
@@ -42,6 +42,24 @@
         </div>
     </div>
 </section>
+@section scripts{
+    @*<script src="~/ConstructionAdmin/js/jquery-1.8.3.min.js"></script>*@
+    <script>
 
+        $(".delete-about").click(function () {
+            var id = $(this).data("id");
+            alert(id);
+       
+        $.ajax({
+            type: 'GET',
+            url: '/ConstructionAdmin/About/Delete/' + id,
+           
+            success: function (data) {
+                $('.results').html(data);
+            }
+        })
+        });
+    </script>
+}
 
 
