Added_Tag_Helpers

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
@@ -52,11 +52,8 @@
        
         $.ajax({
             type: 'GET',
-            url: '/ConstructionAdmin/About/Delete/' + id,
+            url: '/ConstructionAdmin/About/Delete/' + id
            
-            success: function (data) {
-                $('.results').html(data);
-            }
         })
         });
     </script>
