--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
@@ -1,7 +1,45 @@
-﻿
+﻿@model IEnumerable<ServiceViewModel>
 @{
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+    <section class="panel">
+        <header class="panel-heading">
+            Service Table
+        </header>
+        <div class="panel-body">
+            <div class="adv-table editable-table ">
+
+                <div class="space15"></div>
+                <div id="editable-sample_wrapper" class="dataTables_wrapper form-inline" role="grid">
+                    <table class="table table-striped table-hover table-bordered dataTable" id="editable-sample" aria-describedby="editable-sample_info">
+                        <thead>
+                            <tr role="row">
+                                <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Name</th>
+                                <th class="sorting" role="columnheader" tabindex="0" aria-controls="editable-sample" rowspan="1" colspan="1" aria-label="Notes: activate to sort column ascending" style="width: 177px;">Tittle</th>
+                                <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Image</th>
+                                <th class="sorting" role="columnheader" tabindex="0" aria-controls="editable-sample" rowspan="1" colspan="1" aria-label="Edit: activate to sort column ascending" style="width: 87px;">Edit</th>
+                                <th class="sorting" role="columnheader" tabindex="0" aria-controls="editable-sample" rowspan="1" colspan="1" aria-label="Delete: activate to sort column ascending" style="width: 128px;">Delete</th>
+                            </tr>
+                        </thead>
+
+                        <tbody role="alert" aria-live="polite" aria-relevant="all">
+
+                            @foreach (var item in Model)
+                            {
+                                <tr class="odd">
+
+                                    <td class="sorting_1">@item.NameAz</td>
+                                    <td class=" ">@item.TittleAz</td>
+                                    <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
+                                    <td class=" "><a class="edit" href="javascript:;">Edit</a></td>
+                                    <td class=" "><a class="btn btn-danger delete delete-about" data-id="@item.Id">Delete</a></td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </section>
 
