--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -1,7 +1,8 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, ConstructionSite
+@addTagHelper ConstructionSite.Areas.ConstructionAdmin.TagHelpers.*,ConstructionSite
 @using ConstructionSite.Areas.ConstructionAdmin.Models.ViewModels.Account
 @using ConstructionSite.Areas.ConstructionAdmin.Models.DTO
-@using ConstructionSite.DTO.AdminViewModels 
+@using ConstructionSite.DTO.AdminViewModels
 @using ConstructionSite.Entity.Identity
 @using ConstructionSite.Areas.ConstructionAdmin.Models.ViewModels
