--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using ConstructionSite.DTO.FrontViewModels
 @using ConstructionSite.DTO.ModelsDTO;
 @using ConstructionSite
 @using ConstructionSite.Entity.Models
