--- a/ConstructionSite/Views/Services/Index.cshtml
+++ b/ConstructionSite/Views/Services/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<!-- Featured Title -->
+﻿@model IEnumerable<ServiceViewModel>
 <div id="featured-title" class="clearfix featured-title-left">
     <div id="featured-title-inner" class="container clearfix">
         <div class="featured-title-inner-wrap">
@@ -22,30 +22,39 @@
                                     <div class="wprt-spacer" data-desktop="110" data-mobi="30" data-smobi="30"></div>
                                 </div>
                                 <!-- /.col-md-12 -->
-
+                                @foreach (ServiceViewModel  item in Model)
+	{
+		 
+	
                                 <div class="col-md-4">
-                                    <div class="service-item clearfix">
-                                        <div class="thumb"><img src="~/assets/img/services/1.jpg" alt="image" /></div>
+                                    @*<div class="service-item clearfix">
+                                        <div class="thumb"><img src=@item.image" alt="image" /></div>
                                         <div class="service-item-wrap">
-                                            <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Construction">Construction</a></h3>
-                                            <p>Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam.</p>
+                                            <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Construction">@item.NameAz</a></h3>
+                                            <p>@item.TittleAz</p>
                                             <a asp-controller="Services" asp-action="Construction" class="wprt-button small rounded-3px">READ MORE</a>
                                         </div>
-                                    </div>
+                                    </div>*@
                                     <div class="wprt-spacer" data-desktop="60" data-mobi="30" data-smobi="30"></div>
                                     <div class="service-item clearfix">
-                                        <div class="thumb"><img src="~/assets/img/services/1.jpg" alt="image" /></div>
+                                        <div class="thumb"><img width="350" height="223" src="@item.image" alt="image" /></div>
                                         <div class="service-item-wrap">
-                                            <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Renovation">Renovation</a></h3>
-                                            <p>Sed sit amet sapien sit amet odio lobortis ullamcorper quis vel nisl. Nam blandit maximus tristique. Vivamus enim quam.</p>
+                                            <h3 class="title font-size-18"><a asp-controller="Services" asp-action="Renovation">@item.NameAz</a></h3>
+                                            <p>@item.TittleAz</p>
                                             <a asp-controller="Services" asp-action="Renovation" class="wprt-button small rounded-3px">READ MORE</a>
                                         </div>
                                     </div>
                                     <div class="wprt-spacer" data-desktop="0" data-mobi="30" data-smobi="30"></div>
                                 </div>
+
+
+                                }
+
+
+
                                 <!-- /.col-md-4 -->
 
-                                <div class="col-md-4">
+                                <!--<div class="col-md-4">
                                     <div class="service-item clearfix">
                                         <div class="thumb"><img src="~/assets/img/services/2.jpg" alt="image" /></div>
                                         <div class="service-item-wrap">
@@ -64,10 +73,10 @@
                                         </div>
                                     </div>
                                     <div class="wprt-spacer" data-desktop="0" data-mobi="30" data-smobi="30"></div>
-                                </div>
+                                </div>-->
                                 <!-- /.col-md-4 -->
 
-                                <div class="col-md-4">
+                                <!--<div class="col-md-4">
                                     <div class="service-item clearfix">
                                         <div class="thumb"><img src="~/assets/img/services/4.jpg" alt="image" /></div>
                                         <div class="service-item-wrap">
@@ -77,7 +86,7 @@
                                         </div>
                                     </div>
                                     <div class="wprt-spacer" data-desktop="60" data-mobi="30" data-smobi="30"></div>
-                                </div>
+                                </div>-->
                                 <!-- /.col-md-4 -->
 
                                 <div class="col-md-12">
