--- a/ConstructionSite/Views/Services/Single.cshtml
+++ b/ConstructionSite/Views/Services/Single.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model SingleServiceViewModel
 @{
     ViewData["Title"] = "Single";
 }
@@ -29,7 +29,7 @@
                             <div class="line-2"></div>
                         </div>
                         <div class="wprt-spacer" data-desktop="25" data-mobi="25" data-smobi="25"></div>
-                        <p class="margin-bottom-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec erat erat. Integer blandit nulla quis fermentum hendrerit. Vestibulum eu libero volutpat, portas quam acc, tempus sem. Donec sodales quam id lorem lobortis, vitae interdum nisl vehicula. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam suscipit, elit quis facilisis dictum, diam justo volutpat dui. Cras id justo eget sapien scelerisque lacinia non a eros.</p>
+                        <p class="margin-bottom-0">@Model.NameAz</p>
                         <div class="wprt-spacer" data-desktop="35" data-mobi="35" data-smobi="35"></div>
                         <div class="wprt-toggle style-1">
                             <h3 class="toggle-title">We use technology to do the job more quickly</h3>
@@ -54,22 +54,22 @@
                             <div class="line-2"></div>
                         </div>
                         <div class="wprt-spacer" data-desktop="25" data-mobi="25" data-smobi="25"></div>
-                        <p class="margin-bottom-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque nec erat erat. Integer nulla quis fermentum hendrerit. Vestibulum eu libero volutpat, portas quam acc, tempus sem. Donec sodales quam id lorem lobortis, vitae interdum nisl vehicula.</p>
+                        <p class="margin-bottom-0">@Model.TittleAz</p>
                         <div class="wprt-spacer" data-desktop="30" data-mobi="30" data-smobi="30"></div>
                         <div class="wprt-galleries-grid arrow-style-1 has-arrows arrow60 arrow-position-2" data-layout="slider" data-column="2" data-column2="2" data-column3="1" data-column4="1" data-gaph="10" data-gapv="10">
                             <div id="images-wrap" class="cbp">
-                                <div class="cbp-item">
+                                @*<div class="cbp-item">
                                     <div class="item-wrap">
                                         <a class="zoom" href="assets/img/projects/1.jpg"><i class="fa fa-arrows-alt"></i></a>
                                         <img src="~/assets/img/projects/1.jpg" alt="image" />
                                     </div>
-                                </div>
+                                </div>*@
                                 <!--/.cbp-item -->
 
                                 <div class="cbp-item">
                                     <div class="item-wrap">
                                         <a class="zoom" href="assets/img/projects/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                                        <img src="~/assets/img/projects/2.jpg" alt="image" />
+                                        <img src="@Model.image" alt="image" />
                                     </div>
                                 </div>
                                 <!--/.cbp-item -->
