Design-de duzelisler

--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model UserViewModel
+﻿@model ConstructionSite.Areas.ConstructionAdmin.Models.ViewModels.UserViewModel
 
 <!--main content start-->
 <section id="main-content">
