--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/UserProfileName/Default.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Shared/Components/UserProfileName/Default.cshtml
@@ -8,6 +8,6 @@
 </div>
 <ul class="nav nav-pills nav-stacked">
     <li class="active"><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index"> <i class="icon-user"></i> Profile</a></li>
-    <li><a href="profile-activity.html"> <i class="icon-calendar"></i> Recent Activity <span class="label label-danger pull-right r-activity">9</span></a></li>
+    <li><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Create"> <i class="icon-pencil"></i> Create New Admin</a></li>
     <li><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Edit"> <i class="icon-edit"></i> Edit profile</a></li>
 </ul>
