--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Create.cshtml
@@ -16,7 +16,7 @@
                     </header>
                     <div class="panel-body">
                         <div class="form">
-                            <form class="cmxform form-horizontal tasi-form" asp-controller="Account" asp-action="Create" id="signupForm" method="get">
+                            <form class="cmxform form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Create" id="signupForm" method="get">
                                 <div asp-validation-summary="ModelOnly" class="form-group ">
                                     @Html.AntiForgeryToken()
                                     <label for="firstname" class="control-label col-lg-2">@Html.DisplayNameFor(model => model.Name)</label>
