--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Edit.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Edit.cshtml
@@ -14,7 +14,7 @@
                     </div>
                     <ul class="nav nav-pills nav-stacked">
                         <li><a asp-controller="Account" asp-action="Index"> <i class="icon-user"></i> Profile</a></li>
-                        <li class="active"><a asp-controller="Account" asp-action="Edit"> <i class="icon-edit"></i> Edit profile</a></li>
+                        <li class="active"><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Edit" asp-route-id="@Model.Id"> <i class="icon-edit"></i> Edit profile</a></li>
                     </ul>
                 </section>
             </aside>
