--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Index.cshtml
@@ -16,29 +16,9 @@
                     <div class="bio-graph-heading">
                         <h1>Bio Graph</h1>
                     </div>
-                    <div class="panel-body bio-graph-info">
-                        
-                        <div class="row">
-                            <div class="bio-row">
-                                <p><span>Full Name </span>: @Html.DisplayNameFor(model => model.Name)</p>
-                            </div>
-                            <div class="bio-row">
-                                <p><span>Email </span>: @Html.DisplayNameFor(model => model.Email)</p>
-                            </div>
-                            <div class="bio-row">
-                                <p><span>Country </span>: Azerbaijan</p>
-                            </div>
-                            <div class="bio-row">
-                                <p><span>Address </span>: Adress yazilmali</p>
-                            </div>
-                            <div class="bio-row">
-                                <p><span>Mobile </span>: (12) 03 4567890</p>
-                            </div>
-                            <div class="bio-row">
-                                <p><span>Phone </span>: 88 (02) 123456</p>
-                            </div>
-                        </div>
-                    </div>
+                    
+                    <vc:admin-components></vc:admin-components>
+
                 </section>
             </aside>
         </div>
