--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Edit.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Edit.cshtml
@@ -8,10 +8,7 @@
         <div class="row">
             <aside class="profile-nav col-lg-3">
                 <section class="panel">
-                    <div class="user-heading round">
-                        <h1>@Html.DisplayNameFor(model=>model.Name)</h1>
-                        <p>@Html.DisplayNameFor(model=>model.Email)</p>
-                    </div>
+                    <vc:admin-edit></vc:admin-edit>
                     <ul class="nav nav-pills nav-stacked">
                         <li><a asp-controller="Account" asp-action="Index"> <i class="icon-user"></i> Profile</a></li>
                         <li class="active"><a asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Edit" asp-route-id="@Model.Id"> <i class="icon-edit"></i> Edit profile</a></li>
