--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Create.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Account/Create.cshtml
@@ -49,7 +49,7 @@
                                 <div class="form-group">
                                     <div class="col-lg-offset-2 col-lg-10">
                                         <button class="btn btn-danger" type="submit">Save</button>
-                                        <button href="/ConstructionAdmin/Account/Index" class="btn btn-default" type="button">Cancel</button>
+                                        <button asp-area="ConstructionAdmin" asp-controller="Account" asp-action="Index" class="btn btn-default" type="button">Cancel</button>
                                     </div>
                                 </div>
                             </form>
