--- a/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/About/Index.cshtml
@@ -29,8 +29,8 @@
                         {
                         <tr class="odd">
                           
-                            <td class="sorting_1">@item.TittleAz</td>
-                            <td class=" ">@item.ContentAz</td>
+                            <td class="sorting_1">@item.Tittle</td>
+                            <td class=" ">@item.Content</td>
                             <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
                             <td class=" "><a class="edit" href="javascript:;">Edit</a></td>
                             <td class=" "><a class="btn btn-danger delete delete-about" data-id="@item.Id">Delete</a></td>
