--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Service/Index.cshtml
@@ -30,8 +30,8 @@
                             <tr class="odd">
 
                                
-                                <td class="sorting_1">@item.NameAz</td>
-                                <td class=" ">@item.TittleAz</td>
+                                <td class="sorting_1">@item.Name</td>
+                                <td class=" ">@item.Tittle</td>
 
                                 <td class=" "><img src="@item.Image" width="60" height="80" alt="Alternate Text" /></td>
                                 <td class=" "><a class="edit" href="javascript:;">Edit</a></td>
