--- a/ConstructionSite/Views/Services/Single.cshtml
+++ b/ConstructionSite/Views/Services/Single.cshtml
@@ -29,7 +29,7 @@
                             <div class="line-2"></div>
                         </div>
                         <div class="wprt-spacer" data-desktop="25" data-mobi="25" data-smobi="25"></div>
-                        <p class="margin-bottom-0">@Model.NameAz</p>
+                        <p class="margin-bottom-0">@Model.Name</p>
                         <div class="wprt-spacer" data-desktop="35" data-mobi="35" data-smobi="35"></div>
                         <div class="wprt-toggle style-1">
                             <h3 class="toggle-title">We use technology to do the job more quickly</h3>
@@ -54,7 +54,7 @@
                             <div class="line-2"></div>
                         </div>
                         <div class="wprt-spacer" data-desktop="25" data-mobi="25" data-smobi="25"></div>
-                        <p class="margin-bottom-0">@Model.TittleAz</p>
+                        <p class="margin-bottom-0">@Model.Tittle</p>
                         <div class="wprt-spacer" data-desktop="30" data-mobi="30" data-smobi="30"></div>
                         <div class="wprt-galleries-grid arrow-style-1 has-arrows arrow60 arrow-position-2" data-layout="slider" data-column="2" data-column2="2" data-column3="1" data-column4="1" data-gaph="10" data-gapv="10">
                             <div id="images-wrap" class="cbp">
