--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -6,3 +6,4 @@
 @using ConstructionSite.DTO.AdminViewModels
 @using ConstructionSite.Entity.Identity
 @using ConstructionSite.Areas.ConstructionAdmin.Models.ViewModels
+@using ConstructionSite.DTO.AdminViewModels.AddModel
