--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Portfolio/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model PortfolioViewModel
+﻿@model PortfolioAddModel
 @{
     ViewData["Title"] = "Add";
 }
@@ -9,7 +9,7 @@
                 <div class="col-lg-12">
                     <section class="panel">
                         <header class="panel-heading">
-                            Service Add
+                            Portfolio Add
                         </header>
                         <div class="panel-body">
                             <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Portfolio" asp-action="Add" method="post" >
